--- a/JavaScriptProjects/HTML1/HTML_1.html
+++ b/JavaScriptProjects/HTML1/HTML_1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="JavaScript Switch Statement with Animals">
     <title>Animals and Their Food</title>
-    <link rel="stylesheet" href="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\JavaScriptProjects\CSS_1.css">
+    <link rel="stylesheet" href="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\JavaScriptProjects\HTML1\CSS_1.css">
 </head>
 <body>
     <div class="container">
@@ -27,6 +27,10 @@
                     <p>Select an animal to see what it eats.</p>
                 </div>
             </section>
+            <section>
+                <h2>Canvas Section</h2>
+                <canvas class="myCanvas"></canvas>
+            </section>
         </main>
 
         <footer>
@@ -34,6 +38,6 @@
         </footer>
     </div>
 
-    <script src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\JavaScriptProjects\JavaScript_1.js"></script>
+    <script src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\JavaScriptProjects\HTML1\JavaScript_1.js"></script>
 </body>
 </html>
