--- a/Bootstrap4_project/cinema_webpage.html
+++ b/Bootstrap4_project/cinema_webpage.html
@@ -1,67 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academy Cinemas</title>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\cinema_webpage.css">
-    <style>
-        /* Custom CSS for Academy Cinemas */
-        body {
-            background-color: #e6e6fa;
-            padding-top: 60px;
-        }
-
-        .navbar-nav .nav-link,
-        .navbar-brand {
-            color: black !important;
-        }
-
-        #footer {
-            background-color: #800080;
-            color: white;
-        }
-
-        #about {
-            background-color: #8a2be2;
-            color: black;
-        }
-
-        #services {
-            background-color: #e6e6fa;
-        }
-
-        #pictures {
-            background-color: #d8bfd8;
-        }
-
-        #contact {
-            background-color: #800080;
-            color: white;
-        }
-
-        p,
-        .lead {
-            text-align: center;
-        }
-
-        .carousel-inner img {
-            height: 400px; /* Adjusted height for uniformity */
-            object-fit: cover;
-        }
-
-        .modal-header {
-            background-color: #800080;
-            color: white;
-        }
-    </style>
 </head>
-
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Academy Cinemas</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -88,15 +38,19 @@
     </nav>
 
     <!-- About Section -->
-    <section id="about" class="py-5">
+    <section id="about">
         <div class="container">
-            <h2 class="text-center mb-4">About Academy Cinemas</h2>
-            <p class="lead">Welcome to Academy Cinemas, your destination for quality movie experiences in town.</p>
+            <div class="row">
+                <div class="col">
+                    <h2 class="text-center text-white mb-4">About Academy Cinemas</h2>
+                    <p class="lead text-white text-center">Welcome to Academy Cinemas, your destination for quality movie experiences in town.</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="py-5">
+    <section id="services">
         <div class="container">
             <h2 class="text-center mb-4">Our Services</h2>
             <div class="row">
@@ -129,34 +83,35 @@
     </section>
 
     <!-- Pictures Section -->
-    <section id="pictures" class="py-5">
+    <section id="pictures">
         <div class="container">
             <h2 class="text-center mb-4">Pictures</h2>
-            <p class="lead">Explore our gallery of creative minds and hands.</p>
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#pictureModal">
-                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\animation.png" class="img-fluid rounded" alt="Animation">
+                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\animation.png" class="img-fluid rounded picture-img" alt="Animation">
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#pictureModal">
-                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity image.jpg" class="img-fluid rounded" alt="Creativity">
+                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity_image.jpg" class="img-fluid rounded picture-img" alt="Creativity">
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#pictureModal">
-                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity image.webp" class="img-fluid rounded" alt="Perler Beads">
+                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity_image.webp" class="img-fluid rounded picture-img" alt="Perler Beads">
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#pictureModal">
+                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\perler-beads.jpg" class="img-fluid rounded picture-img" alt="Resin Moulds">
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#pictureModal">
-                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\perler-beads.jpg" class="img-fluid rounded" alt="Resin Moulds">
-                    </a>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#pictureModal">
-                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\resin moulds.jpg" class="img-fluid rounded" alt="Artwork">
+                        <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\resin moulds.jpg" class="img-fluid rounded picture-img" alt="Artwork">
                     </a>
                 </div>
             </div>
@@ -168,7 +123,6 @@
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="pictureModalLabel">Enlarged Picture</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -178,10 +132,10 @@
                                 <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\animation.png" class="d-block w-100" alt="Animation">
                             </div>
                             <div class="carousel-item">
-                                <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity image.jpg" class="d-block w-100" alt="Creativity">
+                                <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity_image.jpg" class="d-block w-100" alt="Creativity">
                             </div>
                             <div class="carousel-item">
-                                <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity image.webp" class="d-block w-100" alt="Perler Beads">
+                                <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\creativity_image.webp" class="d-block w-100" alt="Perler Beads">
                             </div>
                             <div class="carousel-item">
                                 <img src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\perler-beads.jpg" class="d-block w-100" alt="Resin Moulds">
@@ -205,7 +159,7 @@
     </div>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-5">
+    <section id="contact">
         <div class="container">
             <h2 class="text-center mb-4">Contact Us</h2>
             <form action="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\email.php" method="POST">
@@ -227,10 +181,10 @@
     </section>
 
     <!-- Footer -->
-    <footer id="footer" class="py-3">
+    <footer id="footer">
         <div class="container">
-            <p class="added-text">Creating memorable movie experiences since 2024!</p>
-            <p>&copy; 2024 Academy Cinemas. All rights reserved.</p>
+            <p class="added-text text-center">Creating memorable movie experiences since 2024!</p>
+            <p class="text-center">&copy; 2024 Academy Cinemas. All rights reserved.</p>
         </div>
     </footer>
 
@@ -243,6 +197,6 @@
 
     <!-- Custom JavaScript -->
     <script src="C:\Users\Monica Gliga\OneDrive\Documents\GitHub\JavaProjects_JavaScript\Bootstrap4_project\cinema_webpage.js"></script>
-</body>
 
+</body>
 </html>
